Added mode to create small runtime to speed up test run